[package]
name = "copy-redis"
version = "0.2.0"
authors = ["maplestoria <zkx6648@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-event = { git = "https://github.com/maplestoria/redis-event.git", branch = "0.3.0-dev" }
log = "0.4.0"
fern = "0.5"
chrono = "0.4"
getopts = "0.2"
redis = { version = "0.15.1", features = ["cluster"] }
ctrlc = { version = "3.0", features = ["termination"] }
murmurhash64 = "0.3.1"
r2d2_redis = "0.13.0"
scheduled-thread-pool = "0.2.4"